# sizeosc-linux

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: hosted-ninja-vcpkg_submod.yml
